force-app/main/default/objects/System_Related_Account__c/System_Related_Account__c.object-meta.xml
<CustomObject>
    <label>System Related Account</label>
    <nameField>
        <displayFormat>SRA-{000000000}</displayFormat>
        <label>System Related Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Related Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>