force-app/main/default/objects/System_Related_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>System Related Accounts</relationshipLabel>
    <relationshipName>System_Related_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>