force-app/main/default/objects/System_Related_Account__c/fields/Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated__c</fullName>
    <label>Date Updated</label>
    <type>DateTime</type>
</CustomField>