force-app/main/default/objects/System_Related_Account__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System</label>
    <referenceTo>System__c</referenceTo>
    <relationshipLabel>System Related Accounts</relationshipLabel>
    <relationshipName>System_Related_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>