force-app/main/default/objects/System_Related_Account__c/fields/System_Status__c.field-meta.xml
<CustomField>
    <fullName>System_Status__c</fullName>
    <formula>System__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Status</label>
    <type>Text</type>
</CustomField>