force-app/main/default/objects/System_Related_Account__c/fields/System_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Type__c</fullName>
    <formula>TEXT(System__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Type</label>
    <type>Text</type>
</CustomField>